--- a/templates/panel_adminlogs.html
+++ b/templates/panel_adminlogs.html
@@ -1,15 +1,6 @@
 {{template "header.html" . }}
 <div class="colstack panel_stack">
-	<nav class="colstack_left" aria-label="The control panel menu">
-		<div class="colstack_item colstack_head submenu_fallback">
-			<div class="rowitem"><a href="/panel/logs/mod/">{{lang "panel_logs_menu_head"}}</a></div>
-		</div>
-		<div class="colstack_item rowmenu submenu_fallback">
-			<div class="rowitem passive"><a href="/panel/logs/mod/">{{lang "panel_logs_menu_moderation"}}</a></div>
-			{{if .CurrentUser.Perms.ViewAdminLogs}}<div class="rowitem passive"><a>{{lang "panel_logs_menu_administration"}}</a></div>{{end}}
-		</div>
-{{template "panel-inner-menu.html" . }}
-	</nav>
+{{template "panel-menu.html" . }}
 	<main class="colstack_right">
 		<div class="colstack_item colstack_head">
 			<div class="rowitem"><h1>{{lang "panel_logs_administration_head"}}</h1></div>
