--- a/templates/panel_themes_menus.html
+++ b/templates/panel_themes_menus.html
@@ -1,19 +1,6 @@
 {{template "header.html" . }}
 <div class="colstack panel_stack">
-
-<nav class="colstack_left" aria-label="Theme manager menu">
-	<div class="colstack_item colstack_head">
-		<div class="rowitem"><a href="/panel/themes/">Theme Manager</a></div>
-	</div>
-	<div class="colstack_item rowmenu">
-		<div class="rowitem passive"><a href="/panel/themes/menus/">Menus</a></div>
-	</div>
-	<div class="colstack_item rowmenu">
-		<div class="rowitem passive"><a href="#">Widgets</a></div>
-	</div>
-{{template "panel-inner-menu.html" . }}
-</nav>
-
+{{template "panel-menu.html" . }}
 	<main class="colstack_right">
 		<div class="colstack_item colstack_head">
 			<div class="rowitem"><h1>{{lang "panel_themes_menus_head"}}</h1></div>
@@ -21,7 +8,7 @@
 		<div id="panel_settings" class="colstack_item rowlist">
 			{{range .ItemList}}
 			<div class="rowitem panel_compactrow editable_parent">
-				<a href="/panel/themes/menus/edit/{{.ID}}" class="editable_block panel_upshift">#{{.ID}}</a>
+				<a href="/panel/themes/menus/edit/{{.ID}}" class="editable_block panel_upshift">{{if .Name}}{{.Name}} - {{end}}#{{.ID}}</a>
 				<a class="panel_compacttext to_right">{{.ItemCount}} items</a>
 			</div>
 			{{end}}
