--- a/templates/panel_themes_menus_item_edit.html
+++ b/templates/panel_themes_menus_item_edit.html
@@ -1,20 +1,8 @@
 {{template "header.html" . }}
 <div class="colstack panel_stack">
-
 {{/** TODO: Set the order based on the order here **/}}
 {{/** TODO: Write the backend code and JS code for saving this menu **/}}
-	<nav class="colstack_left" aria-label="Theme manager menu">
-		<div class="colstack_item colstack_head">
-			<div class="rowitem"><a href="/panel/themes/">Theme Manager</a></div>
-		</div>
-		<div class="colstack_item rowmenu">
-			<div class="rowitem passive"><a href="/panel/themes/menus/">Menus</a></div>
-		</div>
-		<div class="colstack_item rowmenu">
-			<div class="rowitem passive"><a href="#">Widgets</a></div>
-		</div>
-{{template "panel-inner-menu.html" . }}
-	</nav>
+{{template "panel-menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>{{lang "panel_themes_menus_edit_head"}}</h1></div>
