Added the registration logs.
Tweaked the h1 CSS for the Control Panel in Cosora.
Improved the support for autocompleters.
Reverted some of the int64s back to ints.
The per-request user variable should now have the IPs for guests.
Removed some obsolete statements.
Removed a couple obsolete phrases.
Moved a couple more accumulator initializers out of the store initializers.
Refactored one of the report statements to use a store instead of a statement.
Created the menuhead CSS class.
Added the GetOffset method to the LogStore interface and refactored the mod and admin log pages to use it.
Changed the labels on the adminlog and modlog pages to make them more understandable.
Removed the generated templates from Git.

Run the patcher / update script to get the new table.

--- a/templates/account_own_edit.html
+++ b/templates/account_own_edit.html
@@ -9,15 +9,15 @@
 			<form action="/user/edit/critical/submit/?session={{.CurrentUser.Session}}" method="post">
 				<div class="formrow real_first_child">
 					<div class="formitem formlabel"><a>{{lang "account_password_current_password"}}</a></div>
-					<div class="formitem"><input name="account-current-password" type="password" placeholder="*****" required /></div>
+					<div class="formitem"><input name="account-current-password" type="password" placeholder="*****" autocomplete="current-password" required /></div>
 				</div>
 				<div class="formrow">
 					<div class="formitem formlabel"><a>{{lang "account_password_new_password"}}</a></div>
-					<div class="formitem"><input name="account-new-password" type="password" placeholder="*****" required /></div>
+					<div class="formitem"><input name="account-new-password" type="password" placeholder="*****" autocomplete="new-password" required /></div>
 				</div>
 				<div class="formrow">
 					<div class="formitem formlabel"><a>{{lang "account_password_confirm_password"}}</a></div>
-					<div class="formitem"><input name="account-confirm-password" type="password" placeholder="*****" required /></div>
+					<div class="formitem"><input name="account-confirm-password" type="password" placeholder="*****" autocomplete="new-password" required /></div>
 				</div>
 				<div class="formrow">
 					<div class="formitem"><button name="account-button" class="formbutton form_middle_button">{{lang "account_password_update_button"}}</button></div>
