--- a/templates/account_menu.html
+++ b/templates/account_menu.html
@@ -1,5 +1,5 @@
 <nav class="colstack_left">
-	<div class="colstack_item colstack_head rowhead">
+	<div class="colstack_item colstack_head rowhead menuhead">
 		<div class="rowitem">
 			<a href="/user/edit/critical/"><h1>{{lang "account_menu_head"}}</h1></a>
 			</div>
