--- a/templates/panel-inner-menu.html
+++ b/templates/panel-inner-menu.html
@@ -67,6 +67,7 @@
 		<a href="/panel/logs/mod/">{{lang "panel_menu_logs"}}</a>
 	</div>
 	{{if eq .Zone "logs"}}
+		<div class="rowitem passive submenu"><a href="/panel/logs/regs/">{{lang "panel_menu_logs_registrations"}}</a></div>
 		<div class="rowitem passive submenu"><a href="/panel/logs/mod/">{{lang "panel_menu_logs_moderators"}}</a></div>
 		{{if .CurrentUser.Perms.ViewAdminLogs}}<div class="rowitem passive submenu"><a>{{lang "panel_menu_logs_administrators"}}</a></div>{{end}}
 	{{end}}
