--- a/templates/forums.html
+++ b/templates/forums.html
@@ -12,14 +12,13 @@
 		{{if .Desc}}
 			<br /><span class="rowsmall" itemprop="description">{{.Desc}}</span>
 		{{else}}
-			<br /><span class="rowsmall" style="font-style: italic;">{{lang "forums_no_description"}}</span>
+			<br /><span class="rowsmall forum_nodesc">{{lang "forums_no_description"}}</span>
 		{{end}}
 		</span>
-
 		<span class="forum_right shift_right">
 			{{if .LastReplyer.Avatar}}<img class="extra_little_row_avatar" src="{{.LastReplyer.Avatar}}" height=64 width=64 alt="{{.LastReplyer.Name}}'s Avatar" title="{{.LastReplyer.Name}}'s Avatar" />{{end}}
 			<span>
-				<a href="{{.LastTopic.Link}}">{{if .LastTopic.Title}}{{.LastTopic.Title}}{{else}}{{lang "forums_none"}}{{end}}</a>
+				<a {{if .LastTopic.Link}}href="{{.LastTopic.Link}}"{{else}}class="forum_no_poster"{{end}}>{{if .LastTopic.Title}}{{.LastTopic.Title}}{{else}}{{lang "forums_none"}}{{end}}</a>
 				{{if .LastTopicTime}}<br /><span class="rowsmall">{{.LastTopicTime}}</span>{{end}}
 			</span>
 		</span>
