--- a/templates/account_menu.html
+++ b/templates/account_menu.html
@@ -9,7 +9,7 @@
 		<div class="rowitem passive"><a href="/user/edit/username/">{{lang "account_menu_username"}}</a></div>
 		<div class="rowitem passive"><a href="/user/edit/critical/">{{lang "account_menu_password"}}</a></div>
 		<div class="rowitem passive"><a href="/user/edit/email/">{{lang "account_menu_email"}}</a></div>
-		<div class="rowitem passive"><a href="/user/edit/notifications/">{{lang "account_menu_notifications"}}</a></div>
+		<!--<div class="rowitem passive"><a href="/user/edit/notifications/">{{lang "account_menu_notifications"}}</a></div>-->
 		{{/** TODO: Add an alerts page with pagination to go through alerts which either don't fit in the alerts drop-down or which have already been dismissed. Bear in mind though that dismissed alerts older than two weeks might be purged to save space and to speed up the database **/}}
 	</div>
 </nav>
