--- a/templates/header.html
+++ b/templates/header.html
@@ -22,12 +22,13 @@
 	<body>
 		{{if not .CurrentUser.IsSuperMod}}<style>.supermod_only { display: none !important; }</style>{{end}}
 		<div class="container">
+		<!--<div class="navrow">-->
 			<div class="left_of_nav">{{dock "leftOfNav" .Header }}</div>
 			<nav class="nav">
 				<div class="move_left">
 				<div class="move_right">
-				<ul>
-					<li id="menu_overview" class="menu_left"><a href="/" rel="home">{{.Header.Site.ShortName}}</a></li>
+				<ul>{{/** TODO: Have the theme control whether the long or short form of the name is used **/}}
+					<li id="menu_overview" class="menu_left"><a href="/" rel="home">{{if eq .Header.Theme.Name "nox"}}{{.Header.Site.Name}}{{else}}{{.Header.Site.ShortName}}{{end}}</a></li>
 					{{dock "topMenu" .Header }}
 					<li class="menu_left menu_hamburger" title="{{lang "menu_hamburger_tooltip"}}"><a></a></li>
 				</ul>
@@ -35,8 +36,23 @@
 				</div>
 				<div style="clear: both;"></div>
 			</nav>
-			<div class="right_of_nav">{{dock "rightOfNav" .Header }}</div>
-			<div id="back"><div id="main" {{if .Header.Widgets.RightSidebar}}class="shrink_main"{{end}}>
-			<div class="alertbox">{{range .Header.NoticeList}}
-				{{template "notice.html" . }}{{end}}
+			<div class="right_of_nav"><!--{{dock "rightOfNav" .Header }}-->
+{{/** TODO: Make this a separate template and load it via the theme docks, here for now so we can rapidly prototype the Nox theme **/}}
+{{if eq .Header.Theme.Name "nox"}}
+<div class="user_box">
+	<img src="{{.CurrentUser.Avatar}}" />
+	<div class="option_box">
+		<span class="username">{{.CurrentUser.Name}}</span>
+		<span class="alerts">21 new alerts</span>
+	</div>
+</div>
+{{end}}
 			</div>
+		<!--</div>-->
+			<div class="midRow">
+				<div class="midLeft"></div>
+				<div id="back" class="zone_{{.Header.Zone}}{{if .Header.Widgets.RightSidebar}} shrink_main{{end}}">
+					<div id="main" >
+						<div class="alertbox">{{range .Header.NoticeList}}
+				{{template "notice.html" . }}{{end}}
+						</div>
