--- a/templates/panel_setting.html
+++ b/templates/panel_setting.html
@@ -4,15 +4,11 @@
 {{template "panel-menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>{{lang "panel_setting_head"}}</h1></div>
+		<div class="rowitem"><h1>{{.Setting.FriendlyName}}</h1></div>
 	</div>
 	<div id="panel_setting" class="colstack_item">
-		<form action="/panel/settings/edit/submit/{{.Something.Name}}?session={{.CurrentUser.Session}}" method="post">
-			<div class="formrow">
-				<div class="formitem formlabel"><a>{{lang "panel_setting_name"}}</a></div>
-				<div class="formitem formlabel">{{.Something.Name}}</div>
-			</div>
-			{{if eq .Something.Type "list"}}
+		<form action="/panel/settings/edit/submit/{{.Setting.Name}}?session={{.CurrentUser.Session}}" method="post">
+			{{if eq .Setting.Type "list"}}
 			<div class="formrow">
 				<div class="formitem formlabel"><a>{{lang "panel_setting_value"}}</a></div>
 				<div class="formitem">
@@ -21,19 +17,23 @@
 					</select>
 				</div>
 			</div>
-			{{else if eq .Something.Type "bool"}}
+			{{else if eq .Setting.Type "bool"}}
 			<div class="formrow">
 				<div class="formitem formlabel"><a>{{lang "panel_setting_value"}}</a></div>
 				<div class="formitem">
 					<select name="setting-value">
-						<option{{if eq .Something.Content "1"}} selected{{end}} value="1">{{lang "option_yes"}}</option>
-						<option{{if eq .Something.Content "0"}} selected{{end}} value="0">{{lang "option_no"}}</option>
+						<option{{if eq .Setting.Content "1"}} selected{{end}} value="1">{{lang "option_yes"}}</option>
+						<option{{if eq .Setting.Content "0"}} selected{{end}} value="0">{{lang "option_no"}}</option>
 					</select>
 				</div>
 			</div>
+			{{else if eq .Setting.Type "textarea"}}
+			<div class="formrow">
+				<div class="formitem"><textarea name="setting-value">{{.Setting.Content}}</textarea></div>
+			</div>
 			{{else}}<div class="formrow">
 				<div class="formitem formlabel"><a>{{lang "panel_setting_value"}}</a></div>
-				<div class="formitem"><input name="setting-value" type="text" value="{{.Something.Content}}" /></div>
+				<div class="formitem"><input name="setting-value" type="text" value="{{.Setting.Content}}" /></div>
 			</div>{{end}}
 			<div class="formrow">
 				<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel_setting_update_button"}}</button></div>
