--- a/templates/panel_settings.html
+++ b/templates/panel_settings.html
@@ -6,10 +6,10 @@
 			<div class="rowitem"><h1>{{lang "panel_settings_head"}}</h1></div>
 		</div>
 		<div id="panel_settings" class="colstack_item rowlist">
-			{{range $key, $value := .Something}}
+			{{range .Something}}
 			<div class="rowitem panel_compactrow editable_parent">
-				<a href="/panel/settings/edit/{{$key}}" class="editable_block panel_upshift">{{$key}}</a>
-				<a class="panel_compacttext to_right">{{$value}}</a>
+				<a href="/panel/settings/edit/{{.Name}}" class="editable_block panel_upshift">{{.FriendlyName}}</a>
+				<a class="panel_compacttext to_right">{{.Content}}</a>
 			</div>
 			{{end}}
 		</div>
