--- a/themes/cosora/public/panel.css
+++ b/themes/cosora/public/panel.css
@@ -5,6 +5,7 @@
 	border-left: none;
 	border-right: none;
 	padding-left: 0px;
+	padding-bottom: 0px;
 }
 #back {
 	background-color: inherit;
@@ -147,6 +148,10 @@
 	padding-bottom: 4px;
 	margin-bottom: 6px;
 }
+#panel_setting textarea {
+	width: 100%;
+	height: 80px;
+}
 
 #forum_quick_perms .formitem {
 	display: flex;
@@ -255,5 +260,18 @@
 @media(max-width: 999px) {
 	.colstack_left {
 		margin-top: -14.5px;
+	}
+}
+
+@media(min-width: 1000px) {
+	.footBlock {
+		padding-left: 0px;
+		padding-right: 0px;
+	}
+	.footer {
+		max-width: none;
+		width: 100%;
+		margin-left: 0px;
+		margin-right: 0px;
 	}
 }
