Added a couple of simple anti-spam measures.
Made progress with an internal error logging component for the Control Panel.
Made LogWarning less susceptible to races and slightly improved log contention.
Revamped the registration page on Cosora.
Added the SanitiseSingleLine and SanitiseBody functions to better centralise sanitisation and to ensure more consistent sanitisation.
Zero length spaces are no longer permitted in usernames to help prevent impersonation. More to come in this area.
Plugins / internal components can now schedule hourly tasks.
Reduced the chances of newlines breaking the visual layout in areas which expect none.

Added the register_account_anti_spam phrase.

--- a/templates/register.html
+++ b/templates/register.html
@@ -21,10 +21,21 @@
 				<div class="formitem formlabel"><a id="confirm_password_label">{{lang "register_account_confirm_password"}}</a></div>
 				<div class="formitem"><input name="confirm_password" type="password" placeholder="*****" autocomplete="new-password" aria-labelledby="confirm_password_label" required /></div>
 			</div>
-			<div class="formrow">
+			<div class="formrow">{{/** This is not a TOS, that text is there to fool the spambots **/}}
+				<div class="formitem formlabel"><a id="accept_tos_label">{{lang "register_account_anti_spam"}}</a></div>
+				<div class="formitem"><select name="tos" aria-labelledby="accept_tos_label" required>
+					<option value="1" selected>{{lang "option_yes"}}</option>
+					<option value="0">{{lang "option_no"}}</option>
+				</select></div>
+			</div>
+			<div class="formrow register_button_row">
 				<div class="formitem"><button name="register-button" class="formbutton">{{lang "register_submit_button"}}</button></div>
 			</div>
+			<input id="js-antispam" name="antispam" value="nananana" type="hidden" />
 		</form>
 	</div>
 </main>
+<script>{{/** TODO: Are we sure we want to do this by ID, just in case we reuse this and have multiple antispams on the page? **/}}
+document.getElementById("js-antispam").value = "{{.Something}}";
+</script>
 {{template "footer.html" . }}
