--- a/themes/cosora/public/main.css
+++ b/themes/cosora/public/main.css
@@ -1292,7 +1292,7 @@ textarea {
 	margin-bottom: 10px;
 }
 
-#create_topic_page .close_form, #create_topic_page .formlabel, #login_page .formlabel, #register_page .formlabel {
+#create_topic_page .close_form, #create_topic_page .formlabel, #login_page .formlabel {
 	display: none;
 }
 #login_page .formrow:not(:first-child):not(:last-child), #register_page .formrow:not(:first-child):not(:last-child) {
@@ -1301,11 +1301,26 @@ textarea {
 #login_page .formrow:not(:first-child), #register_page .formrow:not(:first-child) {
 	padding-top: 3px;
 }
-#login_page .formrow:not(:last-child), #register_page .formrow:not(:last-child) {
+#login_page .formrow:not(:last-child) {
 	padding-bottom: 0px;
 }
 #login_page .formrow, #register_page .formrow {
 	padding: 16px;
+}
+#register_page .formrow:not(:last-child) {
+	padding-bottom: 4px;
+}
+#register_page .formlabel {
+	display: block;
+	font-size: 15px;
+}
+#register_page .register_button_row {
+	padding: 12px !important;
+	padding-top: 0px !important;
+	margin-top: -2px !important;
+}
+#register_page .register_button_row .formbutton {
+	margin-left: 2px;
 }
 
 /* TODO: Add a generic button_row class and add this to them all? */
